[gd_scene load_steps=2 format=3 uid="uid://bbkagbtywg18u"]

[ext_resource type="Script" uid="uid://61dmchapcd18" path="res://scripts/interfaces/pause_menu.gd" id="1_d1kul"]

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_d1kul")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="resume" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="retry" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Retry"

[node name="exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="settings" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Settings"

[connection signal="pressed" from="VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/settings" to="." method="_on_settings_pressed"]
